tests/profile/error/keybinding/missing_documentation.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "T",
      "name": "T name",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
